去掉sql访问，增加ping例子

--- a/Services/App.config
+++ b/Services/App.config
@@ -5,8 +5,8 @@
   </connectionStrings>
   <appSettings>
     <add key="ServiceName" value="BackService" />
-    <add key="Description" value="后台服务" />
-    <add key="DisplayName" value="后台服务" />
+    <add key="Description" value="每隔一分钟ping一次baidu.com" />
+    <add key="DisplayName" value="BackService" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
