--- a/Services.Test/app.config
+++ b/Services.Test/app.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="ucsmyops_mysql" connectionString="Server =.; Database =test; Uid =root; Pwd =123456;Pooling=true; Max Pool Size=20;Min Pool Size=10;Allow Batch=true;  Allow User Variables=True;Charset=utf8" providerName="MySql.Data.MySqlClient"/>
+    <add name="test_mysql" connectionString="Server =.; Database =test; Uid =root; Pwd =123456;Pooling=true; Max Pool Size=20;Min Pool Size=10;Allow Batch=true;  Allow User Variables=True;Charset=utf8" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
